--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="outbox">
-        <img src="../Assignment 11/Images/image-qr-code.jpg" alt="qr-code">
         <div class="text">
             <figure>
                 <figcaption>
-                    <h2>Improve your front-end skills by building projects</h2><br><br>
-            <p>Scan the QR Code to view the frontend mentor and take your coding skills to the next level</p>
+                    <img src="../Assignment 11/Images/image-qr-code.jpg" alt="qr-code">
+                    <h2><b>Improve your front-end skills by building projects</b></h2><br>
+                    <p>Scan the QR Code to view the frontend mentor and take your coding skills to the next level</p>
                 </figcaption>
             </figure>
         </div>
