--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 11</title>
+    <title>CapacityBay | Assignment 11</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="outbox">
+        <img src="./Images/image-qr-code.jpg" alt="qr-code">
         <div class="text">
-            <figure>
-                <figcaption>
-                    <img src="../Assignment 11/Images/image-qr-code.jpg" alt="qr-code">
-                    <h2><b>Improve your front-end skills by building projects</b></h2><br>
-                    <p>Scan the QR Code to view the frontend mentor and take your coding skills to the next level</p>
-                </figcaption>
-            </figure>
+            <h2>
+                <b>Improve your front-end skills by building projects</b>
+            </h2>
+            <br>
+            <p>
+                Scan the QR Code to view the frontend mentor and take your coding skills to the next level
+            </p>
         </div>
     </div>
 </body>
+
 </html>
